# Qlik-To-PowerBI

./: -- grant role for replication management.sql  .env.example  .gitignore  CHANGELOG.md  README.md  migrate.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
docs/: FAQ.md  MAPPING_REFERENCE.md  QLIK_SCRIPT_TO_POWERQUERY_REFERENCE.md  QLIK_TO_DAX_REFERENCE.md  QLIK_TO_POWERQUERY_REFERENCE.md
docs/guides/: GUIDE_COLLECTE_EXEMPLES.md  GUIDE_POWER_BI_IMPORT.md  MIGRATION_QLIK_CLOUD.md  PRET_A_LEMPLOI.md  QUICK_START_HYBRIDE.md  QUICK_START_QVD.md
docs/reports/: GAP_ANALYSIS.md  PBIX_STATUS.md  RAPPORT_TEST_MIGRATION.md  TEST_RESUME.md  WORKFLOW_MIGRATION.md
docs/technical/: MIGRATION_HYBRIDE_GUIDE.md  MIGRATION_QVD_GUIDE.md  PLAN_DE_TEST.md  QLIK_MIGRATION_GUIDE.md  QLIK_MODEL_MIGRATION.md  QLIK_OBJECTS_COVERAGE.md  QLIK_SCRIPT_MIGRATION.md  QVF_MIGRATION_GUIDE.md
examples/powerbi/: ADVANCED_PATTERNS.py  TROUBLESHOOTING.py  examples.py  pbi_project_examples.py  qlik_migration_examples.py  qlik_model_examples.py  qlik_script_examples.py  qvf_examples.py
output/demo_migration/: sample_sales_extracted.json
src/: main.py
src/fabric_api/: __init__.py  auth.py  client.py  (+13 more)
tests/: conftest.py  test_auth.py  test_client.py  test_complex_e2e.py  test_documentation.py  test_edge_cases.py  test_integration.py  test_medium_integration.py  test_migration_modules.py  test_migration_validation.py  test_phase5_modules.py  test_pipeline_scenarios.py  test_simple_unit.py  test_tmdl_generator.py  test_v31_features.py
(+188 files in other folders)
